--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-my*.py
-
-
-# OSX
-# =========================
-
+### OSX template
 .DS_Store
 .AppleDouble
 .LSOverride
@@ -11,13 +6,16 @@ my*.py
 # Icon must end with two \r
 Icon
 
-
 # Thumbnails
 ._*
 
-# Files that might appear on external disk
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
 .Spotlight-V100
+.TemporaryItems
 .Trashes
+.VolumeIcon.icns
 
 # Directories potentially created on remote AFP share
 .AppleDB
@@ -26,13 +24,5 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-sphinx/_build
-*.*~
-*.pyc
-.idea
-*.swp
-*.html.bak
-
-build/
-compy.egg-info/
-
+# Created by .ignore support plugin (hsz.mobi)
+.idea*
